--- a/ipl-dashboard/src/frontend/src/index.css
+++ b/ipl-dashboard/src/frontend/src/index.css
@@ -1,13 +1,24 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Rubik:wght@400;600&display=swap");
+
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+  color: lightgray;
 }
+
+body {
+  font-family: "Rubik", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+  color: #fff;
+  max-width: 1100px;
+  margin: auto;
+}
+
+
